add all products

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <h2 class="product-price">$150.00</h3>
             </div>
           </article>
-        <!-- #product9 -->
+        <!-- !product9Eye -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -140,13 +140,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">The Eye</h2>
+                <p class="product-brand">Nathan Williams</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$28.00</h3>
             </div>
           </article>
-        <!-- #product10 -->
+        <!-- !product10 Gather Desk Organizer -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -154,13 +154,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Gather Desk Organizer</h2>
+                <p class="product-brand">Ugmonk</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$149.00</h3>
             </div>
           </article>
-        <!-- #product11 -->
+        <!-- !product11Dipped Canteen -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -168,13 +168,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Dipped Canteen</h2>
+                <p class="product-brand">Corkcicle.</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$28.00</h3>
             </div>
           </article> 
-          <!-- #product12 -->
+          <!-- !product12 Sayl Office Chair White-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -182,13 +182,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Sayl Office Chair White</h2>
+                <p class="product-brand">Herman Miller</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$599.00</h3>
             </div>
           </article> 
-          <!-- #product13 -->
+          <!-- !product13 Three Cherry Wood Notebook-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -196,13 +196,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Three Cherry Wood Notebook</h2>
+                <p class="product-brand">Field Notes</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$13.00</h3>
             </div>
           </article> 
-          <!-- #product14 -->
+          <!-- !product14 From Japan -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -210,13 +210,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">From Japan</h2>
+                <p class="product-brand">Counter Print</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$16.00</h3>
             </div>
           </article>  
-          <!-- #product15 -->
+          <!-- !product15 Arigato Desk Lamp -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -224,13 +224,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Arigato Desk Lamp</h2>
+                <p class="product-brand">Grupa</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$380.00</h3>
             </div>
           </article>  
-          <!-- #product16 -->
+          <!-- !product16 Winston Regal Watch -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -238,13 +238,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Winston Regal Watch</h2>
+                <p class="product-brand">Komono</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$58.00</h3>
             </div>
           </article>  
-          <!-- #product17 -->
+          <!-- !product17Letter H Poster -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -252,13 +252,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Letter H Poster</h2>
+                <p class="product-brand">Hey Studio</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$45.00</h3>
             </div>
           </article>  
-          <!-- #product18 -->
+          <!-- !product18Coffee Can -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -266,13 +266,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Coffee Can</h2>
+                <p class="product-brand">Blue Bottle Company</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$11.00</h3>
             </div>
           </article>  
-          <!-- #product19 -->
+          <!-- !product19 Beoplay H4-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -280,13 +280,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Beoplay H4</h2>
+                <p class="product-brand">Bang & Olufsen</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$160.00</h3>
             </div>
           </article>  
-          <!-- #product20 -->
+          <!-- !product20 Make It Now-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -294,13 +294,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Make It Now</h2>
+                <p class="product-brand">Anthony Burrill</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$22.00</h3>
             </div>
           </article>  
-          <!-- #product21 -->
+          <!-- !product21Black Side Chair -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -308,13 +308,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Black Side Chair</h2>
+                <p class="product-brand">Eames Style</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$54.00</h3>
             </div>
           </article>  
-          <!-- #product22 -->
+          <!-- !product22 Min -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -322,13 +322,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Min: The New Simplicity in Graphic Design</h2>
+                <p class="product-brand">Thames & Hudson</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$28.00</h3>
             </div>
           </article>  
-          <!-- #product23 -->
+          <!-- !product23 Grid systems in graphic design-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -336,13 +336,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Grid systems in graphic design</h2>
+                <p class="product-brand">Josef Müller-Brockmann</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$42.00</h3>
             </div>
           </article>  
-          <!-- #product24 -->
+          <!-- !product24 Card Wallet-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -350,13 +350,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Card Wallet</h2>
+                <p class="product-brand">Herschel</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$15.00</h3>
             </div>
           </article>
-        <!-- #product25 -->
+        <!-- !product25 Classic Advice Print Black-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -364,13 +364,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Classic Advice Print Black</h2>
+                <p class="product-brand">Good Fucking Design Advice</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$30.00</h3>
             </div>
           </article>
-        <!-- #product26 -->
+        <!-- !product26 Magic Mouse 2-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -378,13 +378,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Magic Mouse 2</h2>
+                <p class="product-brand">Apple</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$92.00</h3>
             </div>
           </article>
-          <!-- #product27 -->
+          <!-- !product27Travel Tumbler -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -392,13 +392,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Travel Tumbler</h2>
+                <p class="product-brand">Kinto</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$34.00</h3>
             </div>
           </article>
-          <!-- #product28 -->
+          <!-- !product28 Magic Keyboard-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -406,13 +406,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Magic Keyboard</h2>
+                <p class="product-brand">Apple</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$139.00</h3>
             </div>
           </article>
-          <!-- #product29 -->
+          <!-- !product29 Bottle Grinder-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -420,13 +420,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Bottle Grinder</h2>
+                <p class="product-brand">Menu</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$75.00</h3>
             </div>
           </article>
-          <!-- #product30 -->
+         <!-- !product30 Geo Thermos-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -434,13 +434,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Geo Thermos</h2>
+                <p class="product-brand">Normann Copenhagen</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$62.00</h3>
             </div>
           </article>
-          <!-- #product31 -->
+          <!-- !product31 Womb Chair & Ottoman-->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -448,13 +448,13 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Womb Chair & Ottoman</h2>
+                <p class="product-brand">Kardiel</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$799.00</h3>
             </div>
           </article>
-          <!-- #product32 -->
+          <!-- !product32Water Filter Glass Carafe -->
         <article class="card">
             <a class="image-link" href="#">
               <img class="product-img" src="#" alt="product picture" />
@@ -462,10 +462,10 @@
             <div class="hover"></div>
             <div class="description">
               <div class="text-wrapper flex">
-                <h2 class="product-name">name</h2>
-                <p class="product-brand">design</p>
+                <h2 class="product-name">Water Filter Glass Carafe</h2>
+                <p class="product-brand">Soma</p>
               </div>
-              <h2 class="product-price">price</h3>
+              <h2 class="product-price">$30.00</h3>
             </div>
           </article>         
       </section>
