--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- !product1 Backpack-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img1.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -37,7 +37,7 @@
         <!-- !product2 Lamp-->
         <article class="card">
           <a class="image-link" href="#">
-            <img class="product-img" src="" alt="product picture" />
+            <img class="product-img" src="./assets/img/img2.png" alt="product picture" />
           </a>
           <div class="hover"></div>
           <div class="description">
@@ -51,7 +51,7 @@
         <!-- !product3 HajoBackpack-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img3.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -65,7 +65,7 @@
         <!-- !product4 Longboard -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img4.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -79,7 +79,7 @@
         <!-- !product5 Kettle -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img5.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -93,7 +93,7 @@
         <!-- !product6 Car -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img6.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -107,7 +107,7 @@
         <!-- !product7 Logo-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img7.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -121,7 +121,7 @@
         <!-- !product8 Rams-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img8.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -135,7 +135,7 @@
         <!-- !product9Eye -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img9.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -149,7 +149,7 @@
         <!-- !product10 Gather Desk Organizer -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img10.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -163,7 +163,7 @@
         <!-- !product11Dipped Canteen -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img11.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -177,7 +177,7 @@
           <!-- !product12 Sayl Office Chair White-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img12.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -191,7 +191,7 @@
           <!-- !product13 Three Cherry Wood Notebook-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img13.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -205,7 +205,7 @@
           <!-- !product14 From Japan -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img14.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -219,7 +219,7 @@
           <!-- !product15 Arigato Desk Lamp -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img15.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -233,7 +233,7 @@
           <!-- !product16 Winston Regal Watch -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img16.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -247,7 +247,7 @@
           <!-- !product17Letter H Poster -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img17.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -261,7 +261,7 @@
           <!-- !product18Coffee Can -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img18.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -275,7 +275,7 @@
           <!-- !product19 Beoplay H4-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img19.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -289,7 +289,7 @@
           <!-- !product20 Make It Now-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img20.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -303,7 +303,7 @@
           <!-- !product21Black Side Chair -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img21.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -317,7 +317,7 @@
           <!-- !product22 Min -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img22.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -331,7 +331,7 @@
           <!-- !product23 Grid systems in graphic design-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img23.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -345,7 +345,7 @@
           <!-- !product24 Card Wallet-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img24.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -359,7 +359,7 @@
         <!-- !product25 Classic Advice Print Black-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img25.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -373,7 +373,7 @@
         <!-- !product26 Magic Mouse 2-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img26.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -387,7 +387,7 @@
           <!-- !product27Travel Tumbler -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img27.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -401,7 +401,7 @@
           <!-- !product28 Magic Keyboard-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img28.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -415,7 +415,7 @@
           <!-- !product29 Bottle Grinder-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img29.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -429,7 +429,7 @@
          <!-- !product30 Geo Thermos-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img30.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -443,7 +443,7 @@
           <!-- !product31 Womb Chair & Ottoman-->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img31.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
@@ -457,7 +457,7 @@
           <!-- !product32Water Filter Glass Carafe -->
         <article class="card">
             <a class="image-link" href="#">
-              <img class="product-img" src="#" alt="product picture" />
+              <img class="product-img" src="./assets/img/img32.png" alt="product picture" />
             </a>
             <div class="hover"></div>
             <div class="description">
