general and card style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Kanken Art Laptop 15" Special Edition Backpack</h2>
                 <p class="product-brand">Fjallraven</p>
               </div>
@@ -41,7 +41,7 @@
           </a>
           <div class="hover"></div>
           <div class="description">
-            <div class="text-wrapper flex">
+            <div class="text-wrapper">
               <h2 class="product-name">Swing Arm Wood Desk Lamp</h2>
               <p class="product-brand">Tomons</p>
             </div>
@@ -55,7 +55,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Hajo Backpack</h2>
                 <p class="product-brand">Ucon Acrobatics</p>
               </div>
@@ -69,7 +69,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Zed Bamboo Longboard</h2>
                 <p class="product-brand">Retrospec</p>
               </div>
@@ -83,7 +83,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Electric Pour-Over Kettle</h2>
                 <p class="product-brand">Fellow</p>
               </div>
@@ -97,7 +97,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Woodie Vintage Car</h2>
                 <p class="product-brand">Candylab Toys</p>
               </div>
@@ -111,7 +111,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Logo Modernism</h2>
                 <p class="product-brand">Taschen</p>
               </div>
@@ -125,7 +125,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Dieter Rams: As Little Design as Possible</h2>
                 <p class="product-brand">Sophie Lovell</p>
               </div>
@@ -139,7 +139,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">The Eye</h2>
                 <p class="product-brand">Nathan Williams</p>
               </div>
@@ -153,7 +153,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Gather Desk Organizer</h2>
                 <p class="product-brand">Ugmonk</p>
               </div>
@@ -167,7 +167,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Dipped Canteen</h2>
                 <p class="product-brand">Corkcicle.</p>
               </div>
@@ -181,7 +181,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Sayl Office Chair White</h2>
                 <p class="product-brand">Herman Miller</p>
               </div>
@@ -195,7 +195,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Three Cherry Wood Notebook</h2>
                 <p class="product-brand">Field Notes</p>
               </div>
@@ -209,7 +209,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">From Japan</h2>
                 <p class="product-brand">Counter Print</p>
               </div>
@@ -223,7 +223,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Arigato Desk Lamp</h2>
                 <p class="product-brand">Grupa</p>
               </div>
@@ -237,7 +237,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Winston Regal Watch</h2>
                 <p class="product-brand">Komono</p>
               </div>
@@ -251,7 +251,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Letter H Poster</h2>
                 <p class="product-brand">Hey Studio</p>
               </div>
@@ -265,7 +265,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Coffee Can</h2>
                 <p class="product-brand">Blue Bottle Company</p>
               </div>
@@ -279,7 +279,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Beoplay H4</h2>
                 <p class="product-brand">Bang & Olufsen</p>
               </div>
@@ -293,7 +293,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Make It Now</h2>
                 <p class="product-brand">Anthony Burrill</p>
               </div>
@@ -307,7 +307,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Black Side Chair</h2>
                 <p class="product-brand">Eames Style</p>
               </div>
@@ -321,7 +321,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Min: The New Simplicity in Graphic Design</h2>
                 <p class="product-brand">Thames & Hudson</p>
               </div>
@@ -335,7 +335,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Grid systems in graphic design</h2>
                 <p class="product-brand">Josef Müller-Brockmann</p>
               </div>
@@ -349,7 +349,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Card Wallet</h2>
                 <p class="product-brand">Herschel</p>
               </div>
@@ -363,7 +363,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Classic Advice Print Black</h2>
                 <p class="product-brand">Good Fucking Design Advice</p>
               </div>
@@ -377,7 +377,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Magic Mouse 2</h2>
                 <p class="product-brand">Apple</p>
               </div>
@@ -391,7 +391,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Travel Tumbler</h2>
                 <p class="product-brand">Kinto</p>
               </div>
@@ -405,7 +405,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Magic Keyboard</h2>
                 <p class="product-brand">Apple</p>
               </div>
@@ -419,7 +419,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Bottle Grinder</h2>
                 <p class="product-brand">Menu</p>
               </div>
@@ -433,7 +433,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Geo Thermos</h2>
                 <p class="product-brand">Normann Copenhagen</p>
               </div>
@@ -447,7 +447,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Womb Chair & Ottoman</h2>
                 <p class="product-brand">Kardiel</p>
               </div>
@@ -461,7 +461,7 @@
             </a>
             <div class="hover"></div>
             <div class="description">
-              <div class="text-wrapper flex">
+              <div class="text-wrapper">
                 <h2 class="product-name">Water Filter Glass Carafe</h2>
                 <p class="product-brand">Soma</p>
               </div>
