--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
         </article>
         <article class="sozial">
           <h3>Find Us here</h3>
-          <a href="#">Fecebook</a>
+          <a href="#">Facebook</a>
           <a href="#">Instagram</a>
           <a href="#">Twitter</a>
         </article>
