media queries & font style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Document</title>
+    <title>The Design Shop</title>
   </head>
   <body>
     <header>
@@ -485,7 +485,7 @@
         </article>
         <article class="newsletter">
           <h3>Newsletter</h3>
-          <p>Click here to<span>subscribe.</span></p>
+          <p>Click here to<span> subscribe.</span></p>
           <p>Don't worry. We hate spam too.</p>
           
         </article>
