--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         <article class="newsletter">
           <h3>Newsletter</h3>
           <p>Click here to<span> subscribe.</span></p>
-          <p>Don't worry. We hate spam too.</p>
+          <p class="italic">Don't worry. We hate spam too.</p>
 
         </article>
         <article class="sozial">
